--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <article class="card">
             <div class="card-image servicios"></div>
-            <h3>Servicios</h3>
+            <h3><a href="servicios.html">Servicios</h3></a>
         </article>
 
         <article class="card">
@@ -54,5 +54,6 @@
 
 </body>
 </html>
+
 
 
