--- a/index.html
+++ b/index.html
@@ -28,20 +28,24 @@
 
     <!-- SECCIÓN PRINCIPAL -->
     <section class="cards-section">
+
         <article class="card">
-            <div class="card-image formacion"></div>
+            <jpg src="jpg/formacion.jpg" alt="Formación" class="card-jpg">
             <h3>Formación</h3>
         </article>
 
         <article class="card">
-            <div class="card-image servicios"></div>
-            <a href="servicios.html">Servicios</h3></a>
+            <a href="servicios.html">
+                <jpg src="jpg/servicios.jpg" alt="Servicios" class="card-jpg">
+                <h3>Servicios</h3>
+            </a>
         </article>
 
         <article class="card">
-            <div class="card-image blog"></div>
+            <jpg src="img/blog.jpg" alt="Blog" class="card-jpg">
             <h3>Blog</h3>
         </article>
+
     </section>
 
     <!-- PIE DE PÁGINA -->
@@ -54,8 +58,3 @@
 
 </body>
 </html>
-
-
-
-
-
