--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
     <section class="cards-section">
 
         <article class="card">
-            <jpg src="jpg/formacion.jpg" alt="Formación" class="card-jpg">
+            <img src="img/formacion.jpg" alt="Formación" class="card-img">
             <h3>Formación</h3>
         </article>
 
         <article class="card">
             <a href="servicios.html">
-                <jpg src="jpg/servicios.jpg" alt="Servicios" class="card-jpg">
+                <img src="img/servicios.jpg" alt="Servicios" class="card-img">
                 <h3>Servicios</h3>
             </a>
         </article>
 
         <article class="card">
-            <jpg src="img/blog.jpg" alt="Blog" class="card-jpg">
+            <img src="img/blog.jpg" alt="Blog" class="card-img">
             <h3>Blog</h3>
         </article>
 
