--- a/index.html
+++ b/index.html
@@ -1,60 +1,53 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Servicios de Formación | SocialODB</title>
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
+<!DOCTYPE html>  <html lang="es">  
+<head>  
+    <meta charset="UTF-8">  
+    <title>Servicios de Formación | SocialODB</title>  
+    <link rel="stylesheet" href="styles.css">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+</head>  
+<body>  <!-- CABECERA -->  
+<header class="hero">  
+    <div class="hero-content">  
+        <h1>Servicios de Formación Profesional</h1>  
+        <p>Impulsamos el talento y la transformación digital</p>  
+    </div>  
+</header>  
 
-    <!-- CABECERA -->
-    <header class="hero">
-        <div class="hero-content">
-            <h1>Servicios de Formación Profesional</h1>
-            <p>Impulsamos el talento y la transformación digital</p>
-        </div>
-    </header>
+<!-- MENÚ -->  
+<nav class="main-nav">  
+    <ul>  
+        <li><a href="#">Inicio</a></li>  
+        <li><a href="servicios.html">Servicios</a></li>  
+        <li><a href="#">Blog</a></li>  
+        <li><a href="contacto.html">Contacto</a></li>  
+    </ul>  
+</nav>  
 
-    <!-- MENÚ -->
-    <nav class="main-nav">
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+<!-- SECCIÓN PRINCIPAL -->  
+<section class="cards-section">  
+    <article class="card">  
+        <div class="card-image formacion"></div>  
+        <h3>Formación</h3>  
+    </article>  
 
-    <!-- SECCIÓN PRINCIPAL -->
-    <section class="cards-section">
+    <article class="card">  
+        <div class="card-image servicios"></div>  
+        <a href="servicios.html">Servicios</h3></a>  
+    </article>  
 
-        <article class="card">
-            <img src="img/formacion.jpg" alt="Formación" class="card-img">
-            <h3>Formación</h3>
-        </article>
+    <article class="card">  
+        <div class="card-image blog"></div>  
+        <h3>Blog</h3>  
+    </article>  
+</section>  
 
-        <article class="card">
-            <a href="servicios.html">
-                <img src="img/servicios.jpg" alt="Servicios" class="card-img">
-                <h3>Servicios</h3>
-            </a>
-        </article>
+<!-- PIE DE PÁGINA -->  
+<footer class="footer">  
+    <p>Empresa SocialODB</p>  
+    <p>Dirección de contacto: info@socialodb.com</p>  
+    <hr>  
+    <p class="copyright">© 2026 - Página elaborada por ChatGPT</p>  
+</footer>
 
-        <article class="card">
-            <img src="img/blog.jpg" alt="Blog" class="card-img">
-            <h3>Blog</h3>
-        </article>
-
-    </section>
-
-    <!-- PIE DE PÁGINA -->
-    <footer class="footer">
-        <p>Empresa SocialODB</p>
-        <p>Dirección de contacto: info@socialodb.com</p>
-        <hr>
-        <p class="copyright">© 2026 - Página elaborada por ChatGPT</p>
-    </footer>
-
-</body>
-</html>
+</body>  
+</html>  Ponme este código para que las imágenes sean en jpg
